--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -1,7 +1,16 @@
 .jumbotron-img {
-    padding: 9rem;
-    background: asset-url('background/homepage.jpg') no-repeat;
-    background-size: cover;
-    -webkit-filter: brightness(0.9) contrast(1.8);
-    filter: brightness(0.9) contrast(1.8);
+    padding:                13rem;
+    background:             asset-url('background/homepage.jpg') no-repeat;
+    background-size:        cover;
+    -webkit-filter:         brightness(0.9) contrast(1.8);
+    filter:                 brightness(0.9) contrast(1.8);
+    background-position:    30% 40%;
+}
+
+.placeholder-img-1 {
+    padding:                100%;
+    background:             asset-url('background/homepage.jpg') no-repeat;
+    background-size:        cover;
+    -webkit-filter:         brightness(0.9) contrast(1.8);
+    filter:                 brightness(0.9) contrast(1.8);
 }
