--- a/app/views/calendars/index.haml
+++ b/app/views/calendars/index.haml
@@ -1,7 +1,7 @@
 .card.card-sp.pb-0
 	.card-block
 		.row
-			.col.text-center
+			.col
 				.card-title= 'Matchs à venir'
 				.card-subtitle= player.team.club.name
 				.card-text= player.team.name
