--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -14,43 +14,43 @@
         
         .col-12
           .form-group
-            = f.label :best_foot
+            = f.label "Meilleur pied"
             = f.text_field :best_foot, class: 'form-control'
         
         .col-12
           .form-group
-            = f.label :best_side
+            = f.label "Meilleur coté"
             = f.text_field :best_side, class: 'form-control'
 
         .col-12
           .form-group
-            = f.label :right_foot_juggles
+            = f.label "Jongle pied droit"
             = f.text_field :right_foot_juggles, class: 'form-control'
 
         .col-12
           .form-group
-            = f.label :left_foot_juggles
+            = f.label "Jongle pied gauche"
             = f.text_field :left_foot_juggles, class: 'form-control'
 
         .col-12
           .form-group
-            = f.label :head_juggles
+            = f.label "Jongle de la tête"
             = f.text_field :head_juggles, class: 'form-control'
           
         .col-12
           .form-group
-            = f.label :stamina
+            = f.label "Endurance"
             = f.text_field :stamina, class: 'form-control'
 
         .col-12
           .form-group
-            = f.label :speed
+            = f.label "Vitesse"
             = f.text_field :speed, class: 'form-control'
 
         .col-12
           .form-group
-            = f.label :jump
+            = f.label "Détente"
             = f.text_field :jump, class: 'form-control'
 
     .actions
-      = f.submit "Update", class: "btn btn-primary btn-block mb-4"
+      = f.submit "Mettre à jour", class: "btn btn-primary btn-block mb-4"
