--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -1,15 +1,7 @@
-.font-thin {
-    font-weight:    100;
-}
+.font {
+    &-thin { font-weight: 100; }
+    &-bold { font-weight: 900; }
 
-.font-bold {
-    font-weight:    900;
-}
-
-.font-small {
-    font-size:      13px;
-}
-
-.font-big {
-    font-size:      24px;
+    &-small { font-size: 13px; }
+    &-big   { font-size: 24px; }
 }
