--- a/app/views/leagues/index.haml
+++ b/app/views/leagues/index.haml
@@ -1,18 +1,21 @@
+.card.card-sp.pb-0
+  .card-block.pb-0
+    .row.mb-0
+      .col.text-center
+        .card-title= 'Leagues'
+        .card-subtitle= "#{@leagues.count} leagues."
+    .row
+      = link_to 'New League', new_league_path, class: 'btn btn-primary'
+
 .card
   .card-block
-    %h4.card-title= 'Leagues'
-    
-    %table.w-100
-      %thead
-        %tr
-          %th= 'Name'
-          %th{ colspan: '2' }
+    .row
 
-      %tbody
-        - @leagues.each do |league|
-          %tr
-            %td= link_to league.name, league
-            %td= link_to 'Edit', edit_league_path(league)
-            %td= link_to 'Destroy', league, method: :delete, data: { confirm: 'Are you sure?' }
-
-    = link_to 'New League', new_league_path, class: 'btn btn-primary btn-block mt-5'
+      %table.w-100
+        %tbody
+          - @leagues.each do |league|
+            %tr
+              %td= league.name
+              
+              %td= link_to fa_icon('edit'), edit_league_path(league)
+              %td= link_to fa_icon('ban' ), league, method: :delete, data: { confirm: 'Are you sure?' }
