--- a/app/views/players/_attributes.haml
+++ b/app/views/players/_attributes.haml
@@ -1,7 +1,7 @@
 .row.font-small.mb-2
 	- [:best_foot, :best_side, :right_foot_juggles, :left_foot_juggles, :head_juggles, :stamina, :speed, :jump].each do |attribut|
 		- if @player.send(attribut).present?
-			.col-6
+			.col-12.col-md-6
 				- if player == @player
 					= link_to edit_player_registration_path do
 						.panel-gray
@@ -15,7 +15,7 @@
 						.font-thin= @player.send(attribut).to_s.upcase
 		
 		- else
-			.col-6
+			.col-12.col-md-6
 				- if player == @player
 					= link_to edit_player_registration_path do
 						.panel-white
