--- a/app/views/players/index.haml
+++ b/app/views/players/index.haml
@@ -1,28 +1,22 @@
 .card.card-sp.pb-0
   .card-block.pb-0
-    .row
+    .row.mb-0
       .col.text-center
         .card-title= 'Players'
         .card-subtitle= "#{@players.count} players."
+    .row
+      = link_to 'New Player', new_level_path, class: 'btn btn-primary'
 
-.card.card-sp
+.card
   .card-block
     .row
 
       %table.w-100
-        %thead
-          %tr
-            %th #
-            %th Email
-            %th First Name
-            %th Last Name
         %tbody
           - @players.each do |player|
             %tr
-              %th{:scope => "row"}= link_to player.id, player_path(player)
               %td= player.email
               %td= player.first_name
               %td= player.last_name
-
-    .row
-      = link_to 'New Team', new_team_path, class: 'btn btn-primary'
+              
+              %td= link_to fa_icon('ban' ), player, method: :delete, data: { confirm: 'Are you sure?' }
