--- a/app/views/selects/club.haml
+++ b/app/views/selects/club.haml
@@ -2,7 +2,7 @@
     .card-block
     
         .card-title= "Choisis ton club"
-        .card-subtitle= "Dis-nous pour qui tu joues"
+        .card-subtitle= "Dis nous pour quel club tu joues pour qu’on puisse venir te filmer :)"
 
 
 .card.card-sp
