--- a/app/views/selects/team.haml
+++ b/app/views/selects/team.haml
@@ -2,7 +2,7 @@
     .card-block
     
         .card-title= "Choisis ton équipe"
-        .card-subtitle= "Dis-nous pour qui tu joues"
+        .card-subtitle= "On a presque tout ce qu’il nous faut pour venir te filmer !"
 
 
 .card.card-sp
