--- a/app/views/homepage/show.haml
+++ b/app/views/homepage/show.haml
@@ -14,9 +14,9 @@
 		.row.mb-0
 			.col-12
 				.card-subtitle= fa_icon("futbol-o", class: 'mr-2') + "Pourquoi BALLIN ?"
-				.card-text= "Pour augmenter TA VISIBILITE auprès des agents et des recruteurs"
+				.card-text= "Pour augmenter TA VISIBILITE auprès des recruteurs"
 				%br/
-				.card-text= "Pour prendre en main les INFOS que TU souhaites donner aux agents et aux recruteurs de France et de l’étranger"
+				.card-text= "Pour prendre en main les INFOS que TU souhaites donner aux recruteurs de France et de l’étranger"
 				%br/
 				.card-text= "Pour maximiser TES CHANCES de vivre du football sur le long terme"
 				%br/
@@ -28,17 +28,15 @@
 	.card-block
 		.row.mb-0
 			.col-12
-				.row.mb-0
-					.col-xs-12
-						.card-subtitle= fa_icon("futbol-o", class: 'mr-2') + "Comment marche BALLIN ?"
-						.card-text= "BALLIN s’appuie sur la force d’un réseau joueurs-clubs-agents"
-						%br/
-						.card-text= "Toi, le joueur, tu postes les informations sur tes matchs, tes performances, tes attributs c’est simple, rapide et fun ☺"
-						%br/
-						.card-text= "Nous, les BALLIN BOYZ, mettons à disposition toutes ces informations aux recruteurs et agents de France et de l’étranger"
-						%br/
-						.card-text= "En plus de l’information que tu postes, nous venons à ta rencontre filmer tes matchs pour avoir encore plus d’informations sur toi pour t’aider à vivre du football"
-						%br/
-						.card-text= "Plus tu postes d’infos, plus nous venons à ta rencontre filmer tes matchs, en faisant des montages de tes de tes meilleurs actions ! #ballintv"
-						%br/
-						.card-text= "Enfin, nous, BALLIN, construisons des partenariats avec les entreprises pour trouver des emplois et des stages adaptés à la pratique du football"
+				.card-subtitle= fa_icon("futbol-o", class: 'mr-2') + "Comment marche BALLIN ?"
+				.card-text= "BALLIN s’appuie sur la force d’un réseau joueurs-clubs"
+				%br/
+				.card-text= "Toi, le joueur, tu postes les informations sur tes matchs, tes performances, tes attributs c’est simple, rapide et fun"
+				%br/
+				.card-text= "Nous, les BALLIN BOYZ, mettons à disposition toutes ces informations aux recruteurs de France et de l’étranger"
+				%br/
+				.card-text= "En plus de l’information que tu postes, nous venons à ta rencontre filmer tes matchs pour avoir encore plus d’informations sur toi pour t’aider à vivre du football"
+				%br/
+				.card-text= "Plus tu postes d’infos, plus nous venons à ta rencontre filmer tes matchs, en faisant des montages de tes de tes meilleurs actions ! #ballintv"
+				%br/
+				.card-text= "Enfin, nous, BALLIN, construisons des partenariats avec les entreprises pour trouver des emplois et des stages adaptés à la pratique du football"
