Add id to select game

--- a/app/views/games/_form.haml
+++ b/app/views/games/_form.haml
@@ -7,11 +7,11 @@
         = form_for(@game) do |f|
             .form-group
                 = f.label :datetime
-                = f.datetime_field(:datetime, { class: 'form-control' })
+                = f.datetime_field(:datetime, { class: 'form-control required', required: true })
 
             .form-group
                 = f.label "Equipes"
-                = f.select(:teams, Team.all.collect {|t| ["#{t.club.name} #{t.name}", t.id]}, {}, { class: 'form-control', multiple: true, style: 'height: 400px;' })
+                = f.select(:teams, Team.all.collect {|t| ["##{t.id} - #{t.club.name} - #{t.name}", t.id]}, {}, { class: 'form-control', multiple: true, style: 'height: 400px;' })
 
             .actions
                 = f.submit class: 'btn btn-primary'
