--- a/app/views/teams/show.haml
+++ b/app/views/teams/show.haml
@@ -18,16 +18,17 @@
 .card
 	.card-block
 		- if params[:n] == 'calendar'
-			- if @team.games.count.zero?
-				.card-text= "Pas de matches à venir pour #{@team.name}"
-			-else
-				- @team.games.each do |game|
-					= render 'games/game', game: game
+			.col-12.col-md-6
+				- if @team.games.count.zero?
+					.card-text= "Pas de matches à venir pour #{@team.name}"
+				-else
+					- @team.games.each do |game|
+						= render 'games/game', game: game
 		
 		- else
 			.col-12.col-md-6
 				- if @team.players.count.zero?
-					.card-text= "Pas de joueurs inscrit pour #{@team.name}"
+					.card-text= "Pas de joueurs inscrit pour l'équipe #{@team.name}"
 				
 				- else
 					- @team.players.each do |player|
