--- a/app/views/clubs/index.haml
+++ b/app/views/clubs/index.haml
@@ -16,7 +16,7 @@
               %td= club.name
               
               %td= link_to fa_icon('eye' ), club
-              %td= link_to fa_icon('edit'), edit_team_path(club)
+              %td= link_to fa_icon('edit'), edit_club_path(club)
               %td= link_to fa_icon('ban' ), club, method: :delete, data: { confirm: 'Are you sure?' }
 
     .row
