--- a/app/views/games/_team.haml
+++ b/app/views/games/_team.haml
@@ -1,6 +1,6 @@
 
-.small.mb-1= link_to team.name, team
-.card-subtitle= link_to team.club.name, team.club
+.small.mb-1= link_to team.club.name, team.club
+.card-subtitle= link_to team.name, team
 
 .mt-4
 .row
