--- a/app/views/players/_calendar.haml
+++ b/app/views/players/_calendar.haml
@@ -1,5 +1,5 @@
 - @player.team.games.order(datetime: :desc).each do |game|
-	= render 'games/game', game: game
+	= render 'games/game', game: game, cplayer: @player
 
 - if @player.team.games.empty?
 	.card-text= "Pas de matches à venir pour #{@player.full_name}"
